# ros2_project

./: .gitignore
control_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
control_ws/install/ros2_control_demo_example_2/include/ros2_control_demo_example_2/ros2_control_demo_example_2/: diffbot_system.hpp  visibility_control.h
control_ws/install/ros2_control_demo_example_2/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: ros2_control_demo_example_2
control_ws/install/ros2_control_demo_example_2/share/ament_index/resource_index/package_run_dependencies/: ros2_control_demo_example_2
control_ws/install/ros2_control_demo_example_2/share/ament_index/resource_index/parent_prefix_path/: ros2_control_demo_example_2
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  ros2_control_demo_example_2.xml
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  ros2_control_demo_example_2Config-version.cmake  ros2_control_demo_example_2Config.cmake
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/config/: diffbot_controllers.yaml
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/launch/: diffbot.launch.py  view_robot.launch.py
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/ros2_control/: diffbot.ros2_control.xacro
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/urdf/: diffbot.urdf.xacro
control_ws/log/: latest_build
control_ws/src/diffdrive_arduino/: CMakeLists.txt  package.xml
control_ws/src/diffdrive_arduino/bringup/launch/: diffbot.launch.py  rsp.launch.py  test.launch.py
control_ws/src/diffdrive_arduino/description/ros2_control/: diffbot.ros2_control.xacro
control_ws/src/diffdrive_arduino/description/urdf/: diffbot.core.xacro  diffbot.lidar.xacro  diffbot.urdf.xacro  diffbot_description.urdf.xacro
control_ws/src/diffdrive_arduino/hardware/: diffbot_system.cpp
control_ws/src/diffdrive_arduino/hardware/include/diffdrive_arduino/: arduino_comms.hpp  diffbot_system.hpp
control_ws/src/diffdrive_gpio/: CMakeLists.txt  README.md  diffdrive_gpio.xml  package.xml
control_ws/src/diffdrive_gpio/bringup/config/: diffbot_controllers.yaml  test.yaml
control_ws/src/diffdrive_gpio/bringup/launch/: diffbot.launch.py  rsp.launch.py  test.launch.py
control_ws/src/diffdrive_gpio/description/launch/: view_robot.launch.py
control_ws/src/diffdrive_gpio/description/ros2_control/: diffbot.ros2_control.xacro
control_ws/src/diffdrive_gpio/description/urdf/: diffbot.core.xacro  diffbot.urdf.xacro
control_ws/src/diffdrive_gpio/doc/: userdoc.rst
control_ws/src/diffdrive_gpio/hardware/: diffbot_system.cpp  wheel.cpp
control_ws/src/diffdrive_gpio/hardware/include/diffdrive_gpio/: diffbot_system.hpp  wheel.hpp
control_ws/src/diffdrive_gpio/test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
control_ws/src/ros2_control_demo_example_2/description/urdf/: diffbot.urdf.xacro
robox_ws/: encoder.py  lidar_test.py  test_motor.py
robox_ws/install/: local_setup.sh  setup.sh
robox_ws/install/robox/lib/robox/: drive_node  dynamic_transform  dynamic_transfrom  encoder_node  key_input_node  lidar_node
robox_ws/install/robox/share/robox/: package.bash  package.ps1  package.sh  package.xml  package.zsh
robox_ws/install/robox/share/robox/config/: joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml
robox_ws/install/robox/share/robox/description/: inertial_macros.xacro  lidar.xacro  robot_core.xacro  robox.urdf.xacro  ros2_control.xacro
robox_ws/install/robox/share/robox/launch/: launch_robot.launch.py  robox.launch.py  rsp.launch.py  slam.launch.py  slam.launch.yaml
robox_ws/log/: latest_build
robox_ws/src/robox/: package.xml  setup.cfg  setup.py
robox_ws/src/robox/config/: controllers.yaml  mapper_params_online_async.yaml  my_controllers.yaml
robox_ws/src/robox/description/: inertial_macros.xacro  lidar.xacro  output_file.urdf  robox.urdf.xacro  ros2_control.xacro
robox_ws/src/robox/launch/: controller.launch.py  launch_robot.launch.py  launch_robot_old.launch.py  lidar.launch.py  robox.launch.py  rsp.launch.py  slam.launch.py  slam.launch.yaml
robox_ws/src/robox/robox/: OdomNode.py  drive_node.py  dynamic_transform.py  encoder_counter.py  encoder_node.py  key_input_node.py  lidar_node.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/robox/share/robox/: package.dsv  package.sh  package.xml
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/robox/: package.xml  setup.py
ros2_ws/src/robox/robox/: drive_node.py  key_input_node.py  lidar_node.py
